fix board menu alignment

--- a/styles/boardpage.css
+++ b/styles/boardpage.css
@@ -53,7 +53,7 @@ body {
     padding: 4px;
     position: absolute;
     width: 200px;
-    right: 40px;
+    right: -10px;
 }
 
 .menu-activity, .card-activity {
@@ -79,9 +79,10 @@ body {
     margin-left: 10px;
 }
 
-.board-menu-dropdown {
-    margin: 25px;
-    float: right;
+.board-toolbar-right {
+    position: absolute;
+    right: 10px;
+    top: 25px;
 }
 
 ul {
